components/ProjectPage/DevProcess/DevProcess.module.css
.devProcessSection {
  position: relative;
  overflow: hidden;
}

.glow {
  position: absolute;
  inset: 0;
  pointer-events: none;
  z-index: 0;
  background-image:
    radial-gradient(circle at bottom right, var(--glow) 0%, transparent 45%),
    radial-gradient(circle at top left, var(--glow) 0%, transparent 45%);
  background-size: 100%;
  opacity: 0.25;
}

.glowUx {
  background-image: radial-gradient(
    circle at center,
    var(--glow) 0%,
    transparent 45%
  );
}

.sectionWrapper {
  display: flex;
  flex-direction: column;
  gap: 40px;
  padding-top: 60px;
  padding-bottom: 60px;
  justify-content: center;
  align-items: flex-start;
}

.imageContainer {
  border: 1px solid var(--border);
  border-radius: 4px;
  aspect-ratio: 16/9;
}

.img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.infoGrid {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 24px;
  width: 100%;
}

.listContaier {
  display: flex;
  flex-direction: column;
  gap: 18px;
}

.infoList {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.infoListTech {
  display: flex;
  flex-wrap: wrap;
  column-gap: 24px;
  row-gap: 12px;
}

.infoListItem {
  display: flex;
  gap: 12px;
  align-items: center;
}

.icon {
  fill: var(--primary-btn);
  flex-shrink: 0;
}

.title {
  text-align: center;
  align-self: center;
}

@media only screen and (min-width: 768px) {
  .sectionWrapper {
    padding-top: 90px;
    padding-bottom: 90px;
  }

  .imageContainer {
    aspect-ratio: 16/9;
    width: 100%;
  }

  .infoGrid {
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: 40px;
  }

  .listContaier:nth-child(3) {
    grid-column: 1 / -1;
    align-items: center;
  }

  .infoListTech {
    align-items: center;
    justify-content: center;
  }

  .infoTitle {
    font-size: 38px;
  }
}

@media only screen and (min-width: 1440px) {
  .sectionWrapper {
    padding-top: 120px;
    padding-bottom: 120px;
    justify-content: space-between;
  }

  .infoGrid {
    grid-template-columns: repeat(2, 1fr);
    gap: 60px;
    width: 100%;
    justify-content: space-between;
  }

  .listContaier {
    gap: 32px;
  }

  .infoTitle {
    font-size: 52px;
  }
}

